<resources>
    <string name="app_name">ShopAssistant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_company_text">Company</string>
    <string name="button_register_text">Register</string>
    <string name="button_login_text">Login</string>
    <string name="edit_text_username_text">username</string>
    <string name="edit_text_password_text">password</string>
    <string name="button_user_text">User</string>
    <string name="edit_text_fullname_text">Name Surname</string>
    <string name="edit_text_company_name">Company Name</string>
    <string name="text_view_login_user_text">User Login</string>
    <string name="text_view_user_register_text">User Register</string>
    <string name="text_view_company_login_text">Company Login</string>
    <string name="text_view_company_register_text">Company Register</string>
    <string name="action_shopping_list">Shopping List</string>
    <string name="button_search_by_category_text">Search by Category</string>
    <string name="button_shop_by_shop_text">Search by Shop</string>
    <string name="text_view_your_favourite_categories_text">Your Favourite Categories</string>
    <string name="text_view_your_shopping_list_text">Your Shopping List</string>
    <string name="button_change_password_text">Change Password</string>
    <string name="button_change_location_text">Change Location</string>
    <string name="button_edit_favourites_text">Edit Favourites</string>
    <string name="button_logout_text">Logout</string>
    <string name="button_edit_sold_products_text">Edit Sold Products</string>
    <string name="search_global_description">Search settings description</string>
    <string name="search_label">Search label</string>
    <string name="search_hint">Search hint</string>
    <string name="title_activity_search">Search</string>
    <string name="text_view_similar_products_text">Similar Products</string>
    <string name="edit_text_company_user_full_name_text">Name Surname</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="user_menu_drawer_home_text">Home</string>
    <string name="user_menu_drawer_products_text">Products</string>
    <string name="user_menu_drawer_shopping_list_text">Shopping List</string>
    <string name="user_menu_drawer_account_text">Account</string>
    <string name="user_menu_drawer_settings_text">Settings</string>
    <string name="action_search">Search</string>
    <string name="add_product_to_shopping_list">Add product to shopping list</string>
    <string name="delete_product_from_shopping_list">Delete product from shopping list</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>
    <string name="search_result">Search Result!</string>
    <string name="searchable_hint">Search shops and products</string>
    <string name="create_new_account_button_text">Create new Account</string>
</resources>
