<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_search"
          android:actionViewClass="android.widget.SearchView"
          android:icon="@drawable/ic_search"
          android:orderInCategory="1"
          app:showAsAction="ifRoom"
          android:title="@string/action_search" />

    <item android:id="@+id/action_shopping_list"
          android:icon="@drawable/ic_shopping_cart"
          android:orderInCategory="1"
          app:showAsAction="always"
          android:title="@string/action_shopping_list" />

    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_settings"
          android:orderInCategory="100"
          app:showAsAction="never"
          android:title="@string/action_settings" />
</menu>
