<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_main_horizontal_margin"
    android:paddingRight="@dimen/activity_main_horizontal_margin"
    android:paddingTop="@dimen/activity_main_vertical_margin"
    android:paddingBottom="@dimen/activity_main_vertical_margin"
    tools:context=".MainActivity"
    android:background="#161616">

    <LinearLayout
        android:id="@+id/linearLayoutAccountImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1" >

        <com.pkmmte.view.CircularImageView
            android:id="@+id/circularImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image_person"
            app:border="true"
            app:border_color="#8198ee"
            app:border_width="4dp"
            app:shadow="true" />

        <TextView
            android:id="@+id/textViewNameSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Company Name"
            android:textColor="#faf5f8"
            android:textSize="@dimen/text_size"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAccountButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1" >

        <Button
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_change_password_text"
            android:textColor="#faf5f8" />

        <Button
            android:id="@+id/buttonChangeLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_change_location_text"
            android:textColor="#faf5f8" />

        <Button
            android:id="@+id/buttonEditSoldProductsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_sold_products_text"
            android:textColor="#faf5f8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5" >

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2f32fa"
            android:text="@string/button_logout_text"
            android:textColor="#faf5f8" />

    </LinearLayout>

</LinearLayout>
